@@ -1,0 +1,285 @@
+begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+
+begin_package
+DECL|package|org.apache.hadoop.hdfs.server.namenode
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|server
+operator|.
+name|namenode
+package|;
+end_package
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertNotNull
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertNull
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|conf
+operator|.
+name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|HdfsConfiguration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|MiniDFSCluster
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Test
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+import|;
+end_import
+
+begin_class
+DECL|class|TestLeaseManager
+specifier|public
+class|class
+name|TestLeaseManager
+block|{
+DECL|field|conf
+name|Configuration
+name|conf
+init|=
+operator|new
+name|HdfsConfiguration
+argument_list|()
+decl_stmt|;
+annotation|@
+name|Test
+DECL|method|testRemoveLeaseWithPrefixPath ()
+specifier|public
+name|void
+name|testRemoveLeaseWithPrefixPath
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|MiniDFSCluster
+name|cluster
+init|=
+operator|new
+name|MiniDFSCluster
+operator|.
+name|Builder
+argument_list|(
+name|conf
+argument_list|)
+operator|.
+name|numDataNodes
+argument_list|(
+literal|2
+argument_list|)
+operator|.
+name|build
+argument_list|()
+decl_stmt|;
+name|cluster
+operator|.
+name|waitActive
+argument_list|()
+expr_stmt|;
+name|LeaseManager
+name|lm
+init|=
+name|NameNodeAdapter
+operator|.
+name|getLeaseManager
+argument_list|(
+name|cluster
+operator|.
+name|getNamesystem
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|lm
+operator|.
+name|addLease
+argument_list|(
+literal|"holder1"
+argument_list|,
+literal|"/a/b"
+argument_list|)
+expr_stmt|;
+name|lm
+operator|.
+name|addLease
+argument_list|(
+literal|"holder2"
+argument_list|,
+literal|"/a/c"
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|lm
+operator|.
+name|getLeaseByPath
+argument_list|(
+literal|"/a/b"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|lm
+operator|.
+name|getLeaseByPath
+argument_list|(
+literal|"/a/c"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|lm
+operator|.
+name|removeLeaseWithPrefixPath
+argument_list|(
+literal|"/a"
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|lm
+operator|.
+name|getLeaseByPath
+argument_list|(
+literal|"/a/b"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|lm
+operator|.
+name|getLeaseByPath
+argument_list|(
+literal|"/a/c"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|lm
+operator|.
+name|addLease
+argument_list|(
+literal|"holder1"
+argument_list|,
+literal|"/a/b"
+argument_list|)
+expr_stmt|;
+name|lm
+operator|.
+name|addLease
+argument_list|(
+literal|"holder2"
+argument_list|,
+literal|"/a/c"
+argument_list|)
+expr_stmt|;
+name|lm
+operator|.
+name|removeLeaseWithPrefixPath
+argument_list|(
+literal|"/a/"
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|lm
+operator|.
+name|getLeaseByPath
+argument_list|(
+literal|"/a/b"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|lm
+operator|.
+name|getLeaseByPath
+argument_list|(
+literal|"/a/c"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+end_class
+
+end_unit
+
