@@ -540,6 +540,9 @@ Release 2.4.0 - UNRELEASED
     HDFS-5962. Mtime and atime are not persisted for symbolic links. (Akira
     Ajisaka via kihwal)
 
+    HDFS-5944. LeaseManager:findLeaseWithPrefixPath can't handle path like /a/b/
+    and cause SecondaryNameNode failed do checkpoint (Yunjiong Zhao via brandonli)
+
   BREAKDOWN OF HDFS-5698 SUBTASKS AND RELATED JIRAS
 
     HDFS-5717. Save FSImage header in protobuf. (Haohui Mai via jing9)
